# paper-wars-web

./: .env  .env.sample  .gitignore  Cargo.toml  README.md  package-lock.json  package.json  postcss.config.js  webpack.config.js
app/: index.css  index.html  index.js
app/script/: index.js
app/style/: background.css  index.css  layout.css  sign_in.css
src/: lib.rs
src/agents/: authentication.rs  client.rs  mod.rs
src/components/: mod.rs  nav.rs  sign_in.rs
src/routes/: about.rs  index.rs  layout.rs  mod.rs
src/services/: client.rs  mod.rs
