[package]
name = "web"
version = "0.1.0"
authors = ["Cameron Eldridge <cameldridge@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
bin = ["rocket", "rocket_contrib", "dotenv", "tokio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
yew = "0.17"
yew-router = "0.14"
dotenv = { version = "0.15", optional = true }

[dependencies.rocket]
branch = "master"
git = "https://github.com/SergioBenitez/Rocket"
optional = true

[dependencies.rocket_contrib]
branch = "master"
git = "https://github.com/SergioBenitez/Rocket"
default-features = false
features = ["serve"]
optional = true

[dependencies.tokio]
version = "0.2"
features = ["macros"]
optional = true
