[package]
authors = ["Cameron Eldridge <cameldridge@gmail.com>"]
edition = "2018"
name = "web"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
bin = ["rocket", "rocket_contrib", "dotenv", "tokio"]

[dependencies]
anyhow = "1.0"
client = { path = "../client" }
lazy_static = "1.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
yew = "0.17"
yew-router = "0.14"
yewtil = "0.3"

[dependencies.dotenv]
optional = true
version = "0.15"

[dependencies.rocket]
branch = "master"
git = "https://github.com/SergioBenitez/Rocket"
optional = true

[dependencies.rocket_contrib]
branch = "master"
default-features = false
features = ["serve"]
git = "https://github.com/SergioBenitez/Rocket"
optional = true

[dependencies.tokio]
features = ["macros"]
optional = true
version = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
    "Storage",
    "Window",
]
